--- a/GarbageSorting_JAVA/app/src/main/res/layout/garbage_sorting.xml
+++ b/GarbageSorting_JAVA/app/src/main/res/layout/garbage_sorting.xml
@@ -3,21 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#767272"
-    android:orientation="horizontal"
-    android:paddingLeft="5dp">
+    android:padding="5dp"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/container_ui"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
 
     <FrameLayout
         android:id="@+id/container_list"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:background="#6e4d50"
         android:textSize="15sp"
-        android:layout_weight="1.30
-        "/>
+        android:layout_weight="1"
+        />
 </LinearLayout>
+
