--- a/GarbageSorting_JAVA/app/src/main/res/layout/fragment_ui.xml
+++ b/GarbageSorting_JAVA/app/src/main/res/layout/fragment_ui.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5sp"
         android:layout_marginLeft="10sp"
-        android:layout_gravity="left"
+        android:layout_gravity="center"
         android:background="#39f208"
         android:text="Where"/>
 
@@ -50,9 +50,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10sp"
-        android:layout_gravity="left"
+        android:layout_marginBottom="5sp"
+        android:layout_gravity="center"
         android:background="#39f208"
         android:text=" Add a new item "/>
 
+    <Button
+        android:id="@+id/delete_item_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10sp"
+        android:layout_gravity="center"
+        android:background="#39f208"
+        android:text=" delete item "/>
 
 </LinearLayout>
