--- a/GarbageSorting_JAVA/app/src/main/res/layout/fragment_list.xml
+++ b/GarbageSorting_JAVA/app/src/main/res/layout/fragment_list.xml
@@ -6,10 +6,27 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:id="@+id/item_no"
+        android:layout_weight="1"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
-        android:background="@color/white" />
+        android:background="@color/white"/>
+
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10dp"
+        android:layout_gravity="center"
+        android:background="#39f208"
+        android:text="back"
+        android:layout_marginBottom="5dp"/>
 
 </LinearLayout>
